# josan

./: .env.template  CLAUDE.md  README.md  compose.yaml  mise.toml
.github/workflows/: ci.yml
backend/: CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3df37390ad99_message_add_min_night_shifts.py  7a101768a178_.py  a1b2c3d4e5f6_add_free_shift_types.py  a2b3c4d5e6f7_add_position.py  b3c4d5e6f7a8_add_early_shift.py  b4c5d6e7f8a9_add_external_night.py  c4d5e6f7a8b9_add_paid_leave.py  c5d6e7f8a9b0_add_night_shift_request.py  cf7f01cf6d0c_message_initial.py  d929141eb648_user_create.py  e5f6a7b8c9d0_add_day_shift_request.py  f1a2b3c4d5e6_add_off_days_adjustment.py
backend/db/: session.py
backend/docker/: Dockerfile
backend/docs/: new-api.md  new-model.md
backend/entity/: __init__.py  enums.py  member.py  member_capability.py  ng_pair.py  pediatric_doctor_schedule.py  schedule.py  shift_assignment.py  shift_request.py  user.py
backend/params/: member.py  ng_pair.py  pediatric_doctor_schedule.py  schedule.py  shift_request.py  user.py
backend/pdf/: generator.py
backend/response/: member.py  ng_pair.py  pediatric_doctor_schedule.py  schedule.py  shift_request.py  user.py
backend/routers/: member.py  ng_pair.py  pediatric_doctor_schedule.py  schedule.py  shift_request.py  user.py
backend/solver/: config.py  constraints.py  diagnostics.py  generator.py  postprocess.py  validators.py
backend/tests/: conftest.py  test_member_router.py  test_ng_pair_router.py  test_params_validation.py  test_pdf_generator.py  test_pediatric_schedule_router.py  test_schedule_router.py  test_shift_request_router.py
backend/tests/solver/: conftest.py  test_config.py  test_constraints.py  test_diagnostics.py  test_generator.py  test_postprocess.py
docs/: 00_概要.md  01_データモデル.md  02_配置ルール.md  03_シフト生成アルゴリズム.md  04_アプリケーション仕様.md  05_カラーパレット.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docker/: Dockerfile
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  constants.ts  fetcher.ts  schema.d.ts
frontend/src/components/: YearMonthPicker.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: useYearMonth.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: MemberPage.tsx  MonthlySettingsPage.tsx  NgPairPage.tsx  ShiftPage.tsx
