[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.115.0",
    "jpholiday>=0.1.10",
    "ortools>=9.12",
    "pymysql>=1.1.2",
    "reportlab>=4.3",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # module level import not at top (alembic structure)

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
mypy_path = "."
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# サードパーティライブラリの型チェック
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entity.*"
disable_error_code = ["misc", "var-annotated"]  # SQLAlchemy Base subclass + Column type inference

[[tool.mypy.overrides]]
module = "routers.*"
disable_error_code = ["arg-type", "assignment", "call-overload"]  # SQLAlchemy Column型の推論不足

[[tool.mypy.overrides]]
module = "solver.*"
disable_error_code = ["arg-type", "assignment", "call-overload", "misc", "return-value", "index"]

[[tool.mypy.overrides]]
module = "pdf.*"
disable_error_code = ["arg-type"]
